test/tests/stages/18_structures/valid/no_structure_parameters/parse_and_lex/struct_member_looks_like_const.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[28]:
  struct
  identifier(s)
  {
  int
  identifier(E10)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(x1)
  =
  {
  const int(3)
  }
  ;
  return
  identifier(x1)
  .
  identifier(E10)
  ;
  }
