test/tests/stages/18_structures/invalid_parse/extra_credit/labeled_struct_decl.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  identifier(foo)
  :
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  return
  const int(0)
  ;
  }
